# kind_cloud

./: Dockerfile  README.md  example.env  fly.toml  pyproject.toml
app/app/: settings.py  urls.py
app/kind_cloud/: apps.py  forms.py  models.py  urls.py  views.py
app/kind_cloud/migrations/: 0001_initial.py
app/kind_cloud/static/: create.css  create.js  main.css  view_all.css  view_all.js
app/kind_cloud/templates/: admin_edit.html  base.html  create.html  view_all.html
