[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Isaiah Mann <isaiahbmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-bootstrap5 = "^23.3"
fontawesomefree = "^6.5.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
