[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Isaiah Mann <isaiahbmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-bootstrap5 = "^23.3"
fontawesomefree = "^6.5.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
django-cors-headers = "^4.3.1"
dj-database-url = "^2.1.0"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
